# mirrord-go-e2e

./: .gitignore  Cargo.toml
server/: go.mod  main.go
src/: lib.rs
